src/parser/parser.output
Terminals unused in grammar

    COMMENTLINE
    CMD_OPTION


Grammar

    0 $accept: spice $end

    1 spice: netlist end

    2 end: end EOL
    3    | END

    4 netlist: netlist line
    5        | line

    6 line: component EOL
    7     | command EOL
    8     | EOL
    9     | error EOL

   10 component: resistor
   11          | capacitor
   12          | inductor
   13          | vccs
   14          | vs
   15          | vcvs
   16          | cs
   17          | cccs
   18          | ccvs
   19          | diode

   20 command: print
   21        | dc
   22        | ac
   23        | tran
   24        | op
   25        | plot

   26 resistor: RESISTOR node node value

   27 capacitor: CAPACITOR node node value

   28 inductor: INDUCTOR node node value

   29 vccs: VCCS node node node node value

   30 vs: VS node node
   31   | VS node node value
   32   | vs RK_DC value
   33   | vs RK_AC value
   34   | vs RK_PULSE LBRACKET value value value value value value value RBRACKET
   35   | vs RK_SIN LBRACKET value value value value value RBRACKET

   36 vcvs: VCVS node node node node value

   37 cs: CS node node
   38   | CS node node value
   39   | cs RK_DC value
   40   | cs RK_AC value
   41   | cs RK_PULSE LBRACKET value value value value value value value RBRACKET
   42   | cs RK_SIN LBRACKET value value value value value RBRACKET

   43 cccs: CCCS node node VS value

   44 ccvs: CCVS node node VS value

   45 diode: DIODE node node modelName

   46 op: CMD_OP

   47 dc: CMD_DC
   48   | dc VS value value value
   49   | dc CS value value value

   50 ac: CMD_AC RK_DEC value value value
   51   | CMD_AC RK_LIN value value value
   52   | CMD_AC RK_OCT value value value

   53 tran: CMD_TRAN value
   54     | CMD_TRAN value value
   55     | CMD_TRAN value value value

   56 print: CMD_PRINT RK_AC
   57      | CMD_PRINT RK_DC
   58      | CMD_PRINT RK_OP
   59      | CMD_PRINT RK_TRAN
   60      | print VAR_V
   61      | print VAR_I

   62 plot: CMD_PLOT RK_AC
   63     | CMD_PLOT RK_DC
   64     | CMD_PLOT RK_OP
   65     | CMD_PLOT RK_TRAN
   66     | plot VAR_V
   67     | plot VAR_I

   68 modelName: node

   69 node: STRING
   70     | INTEGER
   71     | RESISTOR
   72     | CAPACITOR
   73     | INDUCTOR
   74     | VS
   75     | VCCS

   76 value: VALUE
   77      | FLOAT
   78      | INTEGER


Terminals, with rules where they appear

    $end (0) 0
    error (256) 9
    FLOAT <f> (258) 77
    STRING <s> (259) 69
    INTEGER <n> (260) 70 78
    INDUCTOR <s> (261) 28 73
    CAPACITOR <s> (262) 27 72
    RESISTOR <s> (263) 26 71
    VS <s> (264) 30 31 43 44 48 74
    VCCS <s> (265) 29 75
    VCVS <s> (266) 36
    CS <s> (267) 37 38 49
    CCVS <s> (268) 44
    CCCS <s> (269) 43
    DIODE <s> (270) 45
    COMMENTLINE <s> (271)
    VALUE <f> (272) 76
    END (273) 3
    EOL (274) 2 6 7 8 9
    VAR_V <s> (275) 60 66
    VAR_I <s> (276) 61 67
    RK_OP <s> (277) 58 64
    RK_AC <s> (278) 33 40 56 62
    RK_DC <s> (279) 32 39 57 63
    RK_TRAN <s> (280) 59 65
    RK_DEC <s> (281) 50
    RK_OCT <s> (282) 52
    RK_LIN <s> (283) 51
    RK_PULSE <s> (284) 34 41
    RK_SIN <s> (285) 35 42
    CMD_PRINT (286) 56 57 58 59
    CMD_OP (287) 46
    CMD_DC (288) 47
    CMD_AC (289) 50 51 52
    CMD_PLOT (290) 62 63 64 65
    CMD_OPTION (291)
    CMD_TRAN (292) 53 54 55
    LBRACKET <str> (293) 34 35 41 42
    RBRACKET <str> (294) 34 35 41 42


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    spice (41)
        on left: 1
        on right: 0
    end (42)
        on left: 2 3
        on right: 1 2
    netlist (43)
        on left: 4 5
        on right: 1 4
    line (44)
        on left: 6 7 8 9
        on right: 4 5
    component (45)
        on left: 10 11 12 13 14 15 16 17 18 19
        on right: 6
    command (46)
        on left: 20 21 22 23 24 25
        on right: 7
    resistor <s> (47)
        on left: 26
        on right: 10
    capacitor <s> (48)
        on left: 27
        on right: 11
    inductor <s> (49)
        on left: 28
        on right: 12
    vccs <s> (50)
        on left: 29
        on right: 13
    vs <s> (51)
        on left: 30 31 32 33 34 35
        on right: 14 32 33 34 35
    vcvs <s> (52)
        on left: 36
        on right: 15
    cs <s> (53)
        on left: 37 38 39 40 41 42
        on right: 16 39 40 41 42
    cccs <s> (54)
        on left: 43
        on right: 17
    ccvs <s> (55)
        on left: 44
        on right: 18
    diode <s> (56)
        on left: 45
        on right: 19
    op (57)
        on left: 46
        on right: 24
    dc (58)
        on left: 47 48 49
        on right: 21 48 49
    ac (59)
        on left: 50 51 52
        on right: 22
    tran (60)
        on left: 53 54 55
        on right: 23
    print (61)
        on left: 56 57 58 59 60 61
        on right: 20 60 61
    plot (62)
        on left: 62 63 64 65 66 67
        on right: 25 66 67
    modelName <s> (63)
        on left: 68
        on right: 45
    node <s> (64)
        on left: 69 70 71 72 73 74 75
        on right: 26 27 28 29 30 31 36 37 38 43 44 45 68
    value <f> (65)
        on left: 76 77 78
        on right: 26 27 28 29 31 32 33 34 35 36 38 39 40 41 42 43 44 48 49 50 51 52 53 54 55


State 0

    0 $accept: • spice $end

    error      shift, and go to state 1
    INDUCTOR   shift, and go to state 2
    CAPACITOR  shift, and go to state 3
    RESISTOR   shift, and go to state 4
    VS         shift, and go to state 5
    VCCS       shift, and go to state 6
    VCVS       shift, and go to state 7
    CS         shift, and go to state 8
    CCVS       shift, and go to state 9
    CCCS       shift, and go to state 10
    DIODE      shift, and go to state 11
    EOL        shift, and go to state 12
    CMD_PRINT  shift, and go to state 13
    CMD_OP     shift, and go to state 14
    CMD_DC     shift, and go to state 15
    CMD_AC     shift, and go to state 16
    CMD_PLOT   shift, and go to state 17
    CMD_TRAN   shift, and go to state 18

    spice      go to state 19
    netlist    go to state 20
    line       go to state 21
    component  go to state 22
    command    go to state 23
    resistor   go to state 24
    capacitor  go to state 25
    inductor   go to state 26
    vccs       go to state 27
    vs         go to state 28
    vcvs       go to state 29
    cs         go to state 30
    cccs       go to state 31
    ccvs       go to state 32
    diode      go to state 33
    op         go to state 34
    dc         go to state 35
    ac         go to state 36
    tran       go to state 37
    print      go to state 38
    plot       go to state 39


State 1

    9 line: error • EOL

    EOL  shift, and go to state 40


State 2

   28 inductor: INDUCTOR • node node value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 48


State 3

   27 capacitor: CAPACITOR • node node value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 49


State 4

   26 resistor: RESISTOR • node node value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 50


State 5

   30 vs: VS • node node
   31   | VS • node node value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 51


State 6

   29 vccs: VCCS • node node node node value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 52


State 7

   36 vcvs: VCVS • node node node node value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 53


State 8

   37 cs: CS • node node
   38   | CS • node node value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 54


State 9

   44 ccvs: CCVS • node node VS value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 55


State 10

   43 cccs: CCCS • node node VS value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 56


State 11

   45 diode: DIODE • node node modelName

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 57


State 12

    8 line: EOL •

    $default  reduce using rule 8 (line)


State 13

   56 print: CMD_PRINT • RK_AC
   57      | CMD_PRINT • RK_DC
   58      | CMD_PRINT • RK_OP
   59      | CMD_PRINT • RK_TRAN

    RK_OP    shift, and go to state 58
    RK_AC    shift, and go to state 59
    RK_DC    shift, and go to state 60
    RK_TRAN  shift, and go to state 61


State 14

   46 op: CMD_OP •

    $default  reduce using rule 46 (op)


State 15

   47 dc: CMD_DC •

    $default  reduce using rule 47 (dc)


State 16

   50 ac: CMD_AC • RK_DEC value value value
   51   | CMD_AC • RK_LIN value value value
   52   | CMD_AC • RK_OCT value value value

    RK_DEC  shift, and go to state 62
    RK_OCT  shift, and go to state 63
    RK_LIN  shift, and go to state 64


State 17

   62 plot: CMD_PLOT • RK_AC
   63     | CMD_PLOT • RK_DC
   64     | CMD_PLOT • RK_OP
   65     | CMD_PLOT • RK_TRAN

    RK_OP    shift, and go to state 65
    RK_AC    shift, and go to state 66
    RK_DC    shift, and go to state 67
    RK_TRAN  shift, and go to state 68


State 18

   53 tran: CMD_TRAN • value
   54     | CMD_TRAN • value value
   55     | CMD_TRAN • value value value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 72


State 19

    0 $accept: spice • $end

    $end  shift, and go to state 73


State 20

    1 spice: netlist • end
    4 netlist: netlist • line

    error      shift, and go to state 1
    INDUCTOR   shift, and go to state 2
    CAPACITOR  shift, and go to state 3
    RESISTOR   shift, and go to state 4
    VS         shift, and go to state 5
    VCCS       shift, and go to state 6
    VCVS       shift, and go to state 7
    CS         shift, and go to state 8
    CCVS       shift, and go to state 9
    CCCS       shift, and go to state 10
    DIODE      shift, and go to state 11
    END        shift, and go to state 74
    EOL        shift, and go to state 12
    CMD_PRINT  shift, and go to state 13
    CMD_OP     shift, and go to state 14
    CMD_DC     shift, and go to state 15
    CMD_AC     shift, and go to state 16
    CMD_PLOT   shift, and go to state 17
    CMD_TRAN   shift, and go to state 18

    end        go to state 75
    line       go to state 76
    component  go to state 22
    command    go to state 23
    resistor   go to state 24
    capacitor  go to state 25
    inductor   go to state 26
    vccs       go to state 27
    vs         go to state 28
    vcvs       go to state 29
    cs         go to state 30
    cccs       go to state 31
    ccvs       go to state 32
    diode      go to state 33
    op         go to state 34
    dc         go to state 35
    ac         go to state 36
    tran       go to state 37
    print      go to state 38
    plot       go to state 39


State 21

    5 netlist: line •

    $default  reduce using rule 5 (netlist)


State 22

    6 line: component • EOL

    EOL  shift, and go to state 77


State 23

    7 line: command • EOL

    EOL  shift, and go to state 78


State 24

   10 component: resistor •

    $default  reduce using rule 10 (component)


State 25

   11 component: capacitor •

    $default  reduce using rule 11 (component)


State 26

   12 component: inductor •

    $default  reduce using rule 12 (component)


State 27

   13 component: vccs •

    $default  reduce using rule 13 (component)


State 28

   14 component: vs •
   32 vs: vs • RK_DC value
   33   | vs • RK_AC value
   34   | vs • RK_PULSE LBRACKET value value value value value value value RBRACKET
   35   | vs • RK_SIN LBRACKET value value value value value RBRACKET

    RK_AC     shift, and go to state 79
    RK_DC     shift, and go to state 80
    RK_PULSE  shift, and go to state 81
    RK_SIN    shift, and go to state 82

    $default  reduce using rule 14 (component)


State 29

   15 component: vcvs •

    $default  reduce using rule 15 (component)


State 30

   16 component: cs •
   39 cs: cs • RK_DC value
   40   | cs • RK_AC value
   41   | cs • RK_PULSE LBRACKET value value value value value value value RBRACKET
   42   | cs • RK_SIN LBRACKET value value value value value RBRACKET

    RK_AC     shift, and go to state 83
    RK_DC     shift, and go to state 84
    RK_PULSE  shift, and go to state 85
    RK_SIN    shift, and go to state 86

    $default  reduce using rule 16 (component)


State 31

   17 component: cccs •

    $default  reduce using rule 17 (component)


State 32

   18 component: ccvs •

    $default  reduce using rule 18 (component)


State 33

   19 component: diode •

    $default  reduce using rule 19 (component)


State 34

   24 command: op •

    $default  reduce using rule 24 (command)


State 35

   21 command: dc •
   48 dc: dc • VS value value value
   49   | dc • CS value value value

    VS  shift, and go to state 87
    CS  shift, and go to state 88

    $default  reduce using rule 21 (command)


State 36

   22 command: ac •

    $default  reduce using rule 22 (command)


State 37

   23 command: tran •

    $default  reduce using rule 23 (command)


State 38

   20 command: print •
   60 print: print • VAR_V
   61      | print • VAR_I

    VAR_V  shift, and go to state 89
    VAR_I  shift, and go to state 90

    $default  reduce using rule 20 (command)


State 39

   25 command: plot •
   66 plot: plot • VAR_V
   67     | plot • VAR_I

    VAR_V  shift, and go to state 91
    VAR_I  shift, and go to state 92

    $default  reduce using rule 25 (command)


State 40

    9 line: error EOL •

    $default  reduce using rule 9 (line)


State 41

   69 node: STRING •

    $default  reduce using rule 69 (node)


State 42

   70 node: INTEGER •

    $default  reduce using rule 70 (node)


State 43

   73 node: INDUCTOR •

    $default  reduce using rule 73 (node)


State 44

   72 node: CAPACITOR •

    $default  reduce using rule 72 (node)


State 45

   71 node: RESISTOR •

    $default  reduce using rule 71 (node)


State 46

   74 node: VS •

    $default  reduce using rule 74 (node)


State 47

   75 node: VCCS •

    $default  reduce using rule 75 (node)


State 48

   28 inductor: INDUCTOR node • node value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 93


State 49

   27 capacitor: CAPACITOR node • node value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 94


State 50

   26 resistor: RESISTOR node • node value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 95


State 51

   30 vs: VS node • node
   31   | VS node • node value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 96


State 52

   29 vccs: VCCS node • node node node value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 97


State 53

   36 vcvs: VCVS node • node node node value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 98


State 54

   37 cs: CS node • node
   38   | CS node • node value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 99


State 55

   44 ccvs: CCVS node • node VS value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 100


State 56

   43 cccs: CCCS node • node VS value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 101


State 57

   45 diode: DIODE node • node modelName

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 102


State 58

   58 print: CMD_PRINT RK_OP •

    $default  reduce using rule 58 (print)


State 59

   56 print: CMD_PRINT RK_AC •

    $default  reduce using rule 56 (print)


State 60

   57 print: CMD_PRINT RK_DC •

    $default  reduce using rule 57 (print)


State 61

   59 print: CMD_PRINT RK_TRAN •

    $default  reduce using rule 59 (print)


State 62

   50 ac: CMD_AC RK_DEC • value value value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 103


State 63

   52 ac: CMD_AC RK_OCT • value value value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 104


State 64

   51 ac: CMD_AC RK_LIN • value value value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 105


State 65

   64 plot: CMD_PLOT RK_OP •

    $default  reduce using rule 64 (plot)


State 66

   62 plot: CMD_PLOT RK_AC •

    $default  reduce using rule 62 (plot)


State 67

   63 plot: CMD_PLOT RK_DC •

    $default  reduce using rule 63 (plot)


State 68

   65 plot: CMD_PLOT RK_TRAN •

    $default  reduce using rule 65 (plot)


State 69

   77 value: FLOAT •

    $default  reduce using rule 77 (value)


State 70

   78 value: INTEGER •

    $default  reduce using rule 78 (value)


State 71

   76 value: VALUE •

    $default  reduce using rule 76 (value)


State 72

   53 tran: CMD_TRAN value •
   54     | CMD_TRAN value • value
   55     | CMD_TRAN value • value value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    $default  reduce using rule 53 (tran)

    value  go to state 106


State 73

    0 $accept: spice $end •

    $default  accept


State 74

    3 end: END •

    $default  reduce using rule 3 (end)


State 75

    1 spice: netlist end •
    2 end: end • EOL

    EOL  shift, and go to state 107

    $default  reduce using rule 1 (spice)


State 76

    4 netlist: netlist line •

    $default  reduce using rule 4 (netlist)


State 77

    6 line: component EOL •

    $default  reduce using rule 6 (line)


State 78

    7 line: command EOL •

    $default  reduce using rule 7 (line)


State 79

   33 vs: vs RK_AC • value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 108


State 80

   32 vs: vs RK_DC • value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 109


State 81

   34 vs: vs RK_PULSE • LBRACKET value value value value value value value RBRACKET

    LBRACKET  shift, and go to state 110


State 82

   35 vs: vs RK_SIN • LBRACKET value value value value value RBRACKET

    LBRACKET  shift, and go to state 111


State 83

   40 cs: cs RK_AC • value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 112


State 84

   39 cs: cs RK_DC • value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 113


State 85

   41 cs: cs RK_PULSE • LBRACKET value value value value value value value RBRACKET

    LBRACKET  shift, and go to state 114


State 86

   42 cs: cs RK_SIN • LBRACKET value value value value value RBRACKET

    LBRACKET  shift, and go to state 115


State 87

   48 dc: dc VS • value value value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 116


State 88

   49 dc: dc CS • value value value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 117


State 89

   60 print: print VAR_V •

    $default  reduce using rule 60 (print)


State 90

   61 print: print VAR_I •

    $default  reduce using rule 61 (print)


State 91

   66 plot: plot VAR_V •

    $default  reduce using rule 66 (plot)


State 92

   67 plot: plot VAR_I •

    $default  reduce using rule 67 (plot)


State 93

   28 inductor: INDUCTOR node node • value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 118


State 94

   27 capacitor: CAPACITOR node node • value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 119


State 95

   26 resistor: RESISTOR node node • value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 120


State 96

   30 vs: VS node node •
   31   | VS node node • value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    $default  reduce using rule 30 (vs)

    value  go to state 121


State 97

   29 vccs: VCCS node node • node node value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 122


State 98

   36 vcvs: VCVS node node • node node value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 123


State 99

   37 cs: CS node node •
   38   | CS node node • value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    $default  reduce using rule 37 (cs)

    value  go to state 124


State 100

   44 ccvs: CCVS node node • VS value

    VS  shift, and go to state 125


State 101

   43 cccs: CCCS node node • VS value

    VS  shift, and go to state 126


State 102

   45 diode: DIODE node node • modelName

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    modelName  go to state 127
    node       go to state 128


State 103

   50 ac: CMD_AC RK_DEC value • value value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 129


State 104

   52 ac: CMD_AC RK_OCT value • value value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 130


State 105

   51 ac: CMD_AC RK_LIN value • value value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 131


State 106

   54 tran: CMD_TRAN value value •
   55     | CMD_TRAN value value • value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    $default  reduce using rule 54 (tran)

    value  go to state 132


State 107

    2 end: end EOL •

    $default  reduce using rule 2 (end)


State 108

   33 vs: vs RK_AC value •

    $default  reduce using rule 33 (vs)


State 109

   32 vs: vs RK_DC value •

    $default  reduce using rule 32 (vs)


State 110

   34 vs: vs RK_PULSE LBRACKET • value value value value value value value RBRACKET

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 133


State 111

   35 vs: vs RK_SIN LBRACKET • value value value value value RBRACKET

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 134


State 112

   40 cs: cs RK_AC value •

    $default  reduce using rule 40 (cs)


State 113

   39 cs: cs RK_DC value •

    $default  reduce using rule 39 (cs)


State 114

   41 cs: cs RK_PULSE LBRACKET • value value value value value value value RBRACKET

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 135


State 115

   42 cs: cs RK_SIN LBRACKET • value value value value value RBRACKET

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 136


State 116

   48 dc: dc VS value • value value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 137


State 117

   49 dc: dc CS value • value value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 138


State 118

   28 inductor: INDUCTOR node node value •

    $default  reduce using rule 28 (inductor)


State 119

   27 capacitor: CAPACITOR node node value •

    $default  reduce using rule 27 (capacitor)


State 120

   26 resistor: RESISTOR node node value •

    $default  reduce using rule 26 (resistor)


State 121

   31 vs: VS node node value •

    $default  reduce using rule 31 (vs)


State 122

   29 vccs: VCCS node node node • node value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 139


State 123

   36 vcvs: VCVS node node node • node value

    STRING     shift, and go to state 41
    INTEGER    shift, and go to state 42
    INDUCTOR   shift, and go to state 43
    CAPACITOR  shift, and go to state 44
    RESISTOR   shift, and go to state 45
    VS         shift, and go to state 46
    VCCS       shift, and go to state 47

    node  go to state 140


State 124

   38 cs: CS node node value •

    $default  reduce using rule 38 (cs)


State 125

   44 ccvs: CCVS node node VS • value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 141


State 126

   43 cccs: CCCS node node VS • value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 142


State 127

   45 diode: DIODE node node modelName •

    $default  reduce using rule 45 (diode)


State 128

   68 modelName: node •

    $default  reduce using rule 68 (modelName)


State 129

   50 ac: CMD_AC RK_DEC value value • value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 143


State 130

   52 ac: CMD_AC RK_OCT value value • value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 144


State 131

   51 ac: CMD_AC RK_LIN value value • value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 145


State 132

   55 tran: CMD_TRAN value value value •

    $default  reduce using rule 55 (tran)


State 133

   34 vs: vs RK_PULSE LBRACKET value • value value value value value value RBRACKET

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 146


State 134

   35 vs: vs RK_SIN LBRACKET value • value value value value RBRACKET

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 147


State 135

   41 cs: cs RK_PULSE LBRACKET value • value value value value value value RBRACKET

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 148


State 136

   42 cs: cs RK_SIN LBRACKET value • value value value value RBRACKET

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 149


State 137

   48 dc: dc VS value value • value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 150


State 138

   49 dc: dc CS value value • value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 151


State 139

   29 vccs: VCCS node node node node • value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 152


State 140

   36 vcvs: VCVS node node node node • value

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 153


State 141

   44 ccvs: CCVS node node VS value •

    $default  reduce using rule 44 (ccvs)


State 142

   43 cccs: CCCS node node VS value •

    $default  reduce using rule 43 (cccs)


State 143

   50 ac: CMD_AC RK_DEC value value value •

    $default  reduce using rule 50 (ac)


State 144

   52 ac: CMD_AC RK_OCT value value value •

    $default  reduce using rule 52 (ac)


State 145

   51 ac: CMD_AC RK_LIN value value value •

    $default  reduce using rule 51 (ac)


State 146

   34 vs: vs RK_PULSE LBRACKET value value • value value value value value RBRACKET

    FLOAT    shift, and go to state 69
    INTEGER  shift, and go to state 70
    VALUE    shift, and go to state 71

    value  go to state 154


State 147
